[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xpal"]

[tool.hatch.version]
path = ".version"
pattern = "(?P<version>[^\\s]+)"

[project]
name = "xpal"
dynamic = ["version"]
description = "A batteries-included Python client, CLI, and MCP server for the X (Twitter) API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ran Aroussi", email = "ran@aroussi.com" }
]
dependencies = [
    "tweepy>=4.15.0",
    "requests>=2.28.0",
    "fastmcp>=2.2.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
xpal = "xpal.mcp:main"

[project.urls]
Homepage = "https://github.com/ranaroussi/xpal"
Issues = "https://github.com/ranaroussi/xpal/issues"
